Implementation of CRUD functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.sql.init.mode=always
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
+#Server configuration
+server.error.include-stacktrace=never
+
+
