--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,7 @@ spring.thymeleaf.prefix=file:src/main/resources/templates/
 #Server configuration
 server.error.include-stacktrace=never
 
+#JWT configuration
+jwt.expirationTime=3600000
+jwt.secret=alrokofe#$#$kmjf43j4r32k32mKQ#!@$K!@#jkn
 
